-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5, 6.6, 6.7, 6.8
-
None
-
-
3fc312aa1 (dev), 6ed87143a (6.9), d00412502 (6.8)
-
Multimedia wk 5-6
Recording MP3 audio fails on Windows with Microphone Array (Intel Smart Sound Technology for Digital Microphones) . This appears to be related to the number of output channels and sample type. This microphone has 4 channels, and sample type is float. The MP3 encoder in FFmpeg does not support this number of channels. Machine type: Lenovo P16 Gen 2. Audio input:
Name Intel® Smart Sound Technology for Digital Microphones
Manufacturer Intel(R) Corporation
Status OK
PNP Device ID INTELAUDIO\CTLR_DEV_7A50&LINKTYPE_02&DEVTYPE_00&VEN_8086&DEV_AE20&SUBSYS_230417AA&REV_0001\5&1E5CABC4&0&0000
Driver C:\WINDOWS\SYSTEM32\DRIVERSTORE\FILEREPOSITORY\INTCDMIC.INF_AMD64_6E614E7E678BF370\INTCDMIC.SYS (10.29.0.11261, 766.95 KB (785,360 bytes), 10/13/2024 12:17 PM)
Steps to reproduce:
1. Open recorder example
2. Select "Video" tab.
3. Choose Microphone Array (Intel Smart Sound Technology for Digital Microphones) as input audio device
4. Choose audio codec mp3
5. Push Record
Expected output:
- Audio is recorded
Actual output:
- Recording audio does not work. Errors in log:
Invalid frameRate 0 ; Using the default instead [h264_mf @ 0000020748A01780] MFT name: 'H264 Encoder MFT' [mp3_mf @ 0000020748A042C0] MFT name: 'MP3 Encoder ACM Wrapper MFT' [mp3_mf @ 0000020748A042C0] unsupported input channel number set [SWR @ 0000020748E40540] Output channel layout "" is invalid or unsupported. [SWR @ 0000020748E40540] Context has not been initialized [SWR @ 0000020748E40540] Context has not been initialized [SWR @ 0000020748E40540] Context has not been initialized [SWR @ 0000020748E40540] Context has not been initialized
Also reproducible by running tst_qmediacapturesession
FFmpeg can record fine.
ffmpeg -f dshow -i audio="Microphone Array (Intel® Smart Sound Technology for Digital Microphones)" output.mp3
- relates to
-
QTBUG-136946 when using QMediaPlayer to play audio files, the sound is missing
-
- Reported
-
-
QTBUG-129915 Qt + VB-CABLE : 8 channels on macOS / 2 channels only on Windows
-
- Closed
-
- resulted in
-
QTBUG-136352 No Audio on 6.9.0 Context has not been initialized
-
- Reported
-
| For Gerrit Dashboard: QTBUG-124131 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 660393,16 | FFmpeg: allow use of wmf resampler in ffmpeg | dev | qt/qtmultimedia | Status: NEW | 0 | 0 |
| 619988,6 | Always use stereo channel layout with FFmpeg mp3_mf codec | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 620565,2 | Always use stereo channel layout with FFmpeg mp3_mf codec | 6.9 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 620620,2 | Always use stereo channel layout with FFmpeg mp3_mf codec | 6.8 | qt/qtmultimedia | Status: MERGED | +2 | 0 |